server: use memorylane as already implemented
